syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.sony.authservice.grpc";
option java_outer_classname = "UserProto";

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  string id = 1;
  string email = 2;
}

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
}
